@@ -54,6 +54,7 @@ setup(name='zope.app.publication',
               'zope.app.securitypolicy',
               'zope.app.zcmlfiles>=3.5.4',
               'zope.app.dav',
+              'zope.app.publisher',
               'zope.app.zptpage',
               'zope.principalregistry',
               ]),
@@ -68,7 +69,6 @@ setup(name='zope.app.publication',
                       'zope.browser>=1.2',
                       'zope.publisher>=3.8.0',
                       'zope.traversing>=3.7.0',
-                      'zope.app.publisher',
                       'setuptools',
                       ],
     include_package_data = True,
